Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139038

Overlay issue with Virtual Keyboard + Material Style

XMLWordPrintable

    • Linux/Wayland, Linux/X11, Windows
    • de6b05170 (dev), 7641759c5 (6.10), 13660b496 (tqtc/lts-6.8), 64397aa86 (tqtc/lts-6.5)

      When using the Qt Virtual Keyboard qputenv("QT_IM_MODULE", QByteArray("qtvirtualkeyboard")); in combination with the Material Style, there are overlay and event propagation issues with dialogs.
       
      Issue 1 – Dialog not closing on outside click

      • In the small-sized dialog view: clicking underneath the dialog does not close it.
      • In the maximized dialog view: clicking to the left or right of the dialog also does not close it.
      • This behavior occurs only when the virtual keyboard is enabled via the above qputenv setting.

       
      Issue 2 – Events passing through an open dialog

      • When a dialog is open, click or touch events are incorrectly passed to elements behind the dialog.
      • This allows interaction with underlying UI components while the dialog is visible, e.g.:
        • Typing into a TextField using the virtual keyboard.
        • Moving a slider.

       
      Platforms affected:

      • Windows 10 – tested from Qt Creator 17.0.0 using Qt 6.8.4
      • Ubuntu 24.04 – tested from from Qt Creator 16.0.2 and a standalone application using Qt 6.8.3

       
      Expected behavior:

      • Clicking outside the dialog should close it.
      • While a dialog is open, underlying UI elements should not receive input events.

       

        1. overlayIssue.zip
          2 kB
          Gábor Csikos
        2. 2025-08-08 08-50-30.mkv
          1.35 MB
          Gábor Csikos
        3. 2025-08-08 08-53-43.mkv
          2.09 MB
          Gábor Csikos
        For Gerrit Dashboard: QTBUG-139038
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            csikosgabor.ziptech Gábor Csikos
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes