Ignore dimmer contains() calls when the keyboard is invisible

If the app integration uses the InputPanel.visible property to show or
hide the keyboard, the contains() calls within the invisible keyboard
were bypassing the dimmer.

Fixes: QTBUG-139038
Pick-to: 6.9 6.8 6.5
Change-Id: I8e9340292a3183b163c8486231894a3859c640ef
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit de6b0517057ebe63cfbaf88d46cb19dcfbbf9f75)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>